Fix Evil Dark Mode Bug Very Nasty Very Devious

--- a/React/src/index.css
+++ b/React/src/index.css
@@ -7,8 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: light;
   background: linear-gradient(125deg, rgba(236,175,175,1) 0%, rgba(242,242,242,1) 50%, rgba(162,164,255,1) 100%); 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
